<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".WakeUpHandle"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <TextView android:ellipsize="end"
            android:id="@+id/event_date"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:gravity="center"
            android:lineSpacingExtra="3dp"
            android:singleLine="true"
            android:text="@string/aug_21_2024"/>
        <TextView android:ellipsize="end"
            android:id="@+id/event_time_text"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:gravity="center"
            android:lineSpacingExtra="3dp"
            android:singleLine="true"
            android:text="@string/lbl_10_00_13_00"/>

        <TextView
            android:id="@+id/event_title"
            style="@style/txtABeeZeeitalic16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/msg_design_new_ux_f"
            tools:text="@string/msg_design_new_ux_f" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/alarm"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/disable"
            android:id="@+id/disable_alarm_button"/>
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>